--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
       retries: 1
-  path-pilot-service:
+  tecnos-service:
     image: tecnos1999/tecnos-server:latest
     networks:
       - mynet
@@ -33,16 +33,16 @@ services:
       - "8081:8080"
     depends_on:
       - mysql
-  # clientapp:
-  #   image: floredenis2001/path-pilot-client:15.07.2024.20.37.37
-  #   networks:
-  #     - mynet
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - path-pilot-service
-  #   environment:
-  #     - REACT_APP_ENV=prod
+  clientapp:
+     image: tecnos1999/tecnos-client:latest
+     networks:
+       - mynet
+     ports:
+       - "80:80"
+     depends_on:
+       - path-pilot-service
+     environment:
+       - REACT_APP_ENV=prod
   # nginx:
   #   image: floredenis2001/path-pilot-proxy:v2
   #   networks:
