--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -80,7 +80,7 @@ services:
   clientapp:
     image: tecnos1999/tecnos-client:07.11.2024.20.06.28
     environment:
-      REACT_APP_ENV: prod
+      REACT_APP_ENV: production
     ports:
       - "3000:3000"
     networks:
@@ -92,7 +92,7 @@ services:
   tecnos-management:
     image: tecnos1999/tecnos-management:06.11.2024.23.20.21
     environment:
-      REACT_APP_ENV: prod
+      REACT_APP_ENV: production
     ports:
       - "3001:3001"
     networks:
